--- a/Result.html
+++ b/Result.html
@@ -234,7 +234,7 @@ img.no-save {
   const archetypes = {
     "blue-control": ["Tender Protector", "You lead with gravity, not volume.", "...", "...", "tender_protector", "tender_protector"],
     "blue-partner control": ["Devoted Darling", "Nothing is as kinky as loyalty.", "...", "...", "devoted_darling", "devoted_darling"],
-    "blue-depends mood": ["Heatwave", "There's no need to change who you are...", "...", "...", "heatwave", "heatwave"],
+    "blue-depends mood": ["Heatwave", "There's no need to change who you are, because people will adjust to you.", "...", "...", "heatwave", "heatwave"],
     "blue-depends partner": ["Mood Multiplier", "You match their vibe—and raise it.", "...", "...", "mood_multiplier", "mood_multiplier"],
     "green-control": ["Charmer in Charge", "You don’t just take control. You make them beg for it.", "...", "...", "charmer_in_charge", "charmer_in_charge"],
     "green-partner control": ["Promiscuous Plaything", "Get ready for a wild ride!", "...", "...", "promiscuous_plaything", "promiscuous_plaything"],
