--- a/premium/erotic-blueprint_bedroom_adventurer.html
+++ b/premium/erotic-blueprint_bedroom_adventurer.html
@@ -308,5 +308,11 @@
 
   </div>
 </div>
+  <footer style="text-align: center; margin-top: 40px;">
+  <p style="font-size: 0.8rem; color: white; opacity: 0.7;">
+    © 2025 Le Libido. All rights reserved. |
+    <a href="/legal.html" style="color: gold; text-decoration: underline;">Legal Notice</a>
+  </p>
+</footer>
 </body>
 </html>
