--- a/premium/erotic-blueprint_charmer_in_charge.html
+++ b/premium/erotic-blueprint_charmer_in_charge.html
@@ -341,3 +341,10 @@ Their next level of dominance comes from guiding someone into emotional surrende
   <p>They scramble to get dressed. You fix your hair in the mirror.</p>
 
   <p>“Welcome to the mile-high club,” you say. “Aren’t you glad we met?”</p>
+
+  <footer style="text-align: center; margin-top: 40px;">
+  <p style="font-size: 0.8rem; color: white; opacity: 0.7;">
+    © 2025 Le Libido. All rights reserved. |
+    <a href="/legal.html" style="color: gold; text-decoration: underline;">Legal Notice</a>
+  </p>
+</footer>
