--- a/premium/erotic-blueprint_devoted_darling.html
+++ b/premium/erotic-blueprint_devoted_darling.html
@@ -253,5 +253,11 @@
   <p>It feels real.</p>
 
 </div>
+  <footer style="text-align: center; margin-top: 40px;">
+  <p style="font-size: 0.8rem; color: white; opacity: 0.7;">
+    © 2025 Le Libido. All rights reserved. |
+    <a href="/legal.html" style="color: gold; text-decoration: underline;">Legal Notice</a>
+  </p>
+</footer>
 </body>
 </html>
