--- a/premium/erotic-blueprint_dungeon_master.html
+++ b/premium/erotic-blueprint_dungeon_master.html
@@ -304,3 +304,10 @@
   <p>You escort them to the door. They stand, upright, chest soft, eyes bright. They know they’ve crossed a threshold of trust, and returned safely.</p>
 
   <p>You clasp their hand, guide them back into the world, still under your subtle command.</p>
+
+  <footer style="text-align: center; margin-top: 40px;">
+  <p style="font-size: 0.8rem; color: white; opacity: 0.7;">
+    © 2025 Le Libido. All rights reserved. |
+    <a href="/legal.html" style="color: gold; text-decoration: underline;">Legal Notice</a>
+  </p>
+</footer>
