--- a/premium/erotic-blueprint_promiscuous_plaything.html
+++ b/premium/erotic-blueprint_promiscuous_plaything.html
@@ -311,5 +311,11 @@
 
       <p>You sigh, feeling wanted—chosen—controlled—exactly how you like it.</p>
     </div>
+  <footer style="text-align: center; margin-top: 40px;">
+  <p style="font-size: 0.8rem; color: white; opacity: 0.7;">
+    © 2025 Le Libido. All rights reserved. |
+    <a href="/legal.html" style="color: gold; text-decoration: underline;">Legal Notice</a>
+  </p>
+</footer>
     </body>
 </html>
