--- a/premium/erotic-blueprint_provoker.html
+++ b/premium/erotic-blueprint_provoker.html
@@ -279,5 +279,11 @@
     <p>The woman glances at the man, lips curving. “That depends. Would we have to go anywhere far?” </p>
     <p>And just like that, you found new buttons to press.</p>
   </div>
+  <footer style="text-align: center; margin-top: 40px;">
+  <p style="font-size: 0.8rem; color: white; opacity: 0.7;">
+    © 2025 Le Libido. All rights reserved. |
+    <a href="/legal.html" style="color: gold; text-decoration: underline;">Legal Notice</a>
+  </p>
+</footer>
 </body>
 </html>
