--- a/premium/erotic-blueprint_punish_me.html
+++ b/premium/erotic-blueprint_punish_me.html
@@ -274,5 +274,11 @@
     <p>As they press a final kiss to your cheek, one thought repeats in your mind.</p>
     <p>Tomorrow, you’re definitely going to misbehave again.</p>
   </div>
+  <footer style="text-align: center; margin-top: 40px;">
+  <p style="font-size: 0.8rem; color: white; opacity: 0.7;">
+    © 2025 Le Libido. All rights reserved. |
+    <a href="/legal.html" style="color: gold; text-decoration: underline;">Legal Notice</a>
+  </p>
+</footer>
 </body>
 </html>
