--- a/quiz-new.html
+++ b/quiz-new.html
@@ -9,21 +9,20 @@
     body {
       margin: 0;
       font-family: 'Montserrat', sans-serif;
-      background-color: #950606; /* red background */
+      background: linear-gradient(135deg, #950606, #06954E, #064D95); /* RGB gradient */
       color: white;
       text-align: center;
       padding: 50px 20px;
     }
 
     .border-wrapper {
-      border: 5px solid;
-      border-image: linear-gradient(135deg, #064D95, #06954E, #950606) 1;
+      border: 4px solid #e1bf78;
       border-radius: 20px;
       padding: 40px 20px;
       max-width: 900px;
       margin: 0 auto;
-      box-shadow: 0 0 15px rgba(225, 191, 120, 0.3);
       background: transparent;
+      box-shadow: 0 0 15px rgba(225, 191, 120, 0.4);
     }
 
     .logo-wrapper {
