--- a/quiz-new.html
+++ b/quiz-new.html
@@ -9,7 +9,14 @@
     body {
       margin: 0;
       font-family: 'Montserrat', sans-serif;
-      background: linear-gradient(135deg, #950606, #06954E, #064D95); /* RGB gradient */
+      background: linear-gradient(
+        to bottom right,
+        #950606,
+        #064D95,
+        #06954E,
+        #064D95,
+        #950606
+      );
       color: white;
       text-align: center;
       padding: 50px 20px;
